--- a/turbo.json
+++ b/turbo.json
@@ -1,20 +1,14 @@
 {
   "$schema": "https://turborepo.org/schema.json",
   "pipeline": {
-    "lint:staged": {
-      "dependsOn": ["lint:staged"],
-      "outputs": []
-    },
-    "test:changed": {
-      "dependsOn": ["test:changed"],
-      "outputs": []
-    },
     "build": {
-      "dependsOn": ["^build", "generate"],
+      "dependsOn": ["generate", "^build"],
       "outputs": ["dist/**", ".next/**"]
     },
     "dev": {
-      "cache": false
+      "cache": false,
+      "dependsOn": ["generate", "^dev"],
+      "outputs": ["dist/**", ".next/**"]
     }
   }
 }
