--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "Maximilian Weber <maximilian.weber@bf.uzh.ch>"
   ],
   "scripts": {
-    "dev": "turbo run dev",
+    "dev": "turbo run dev --parallel",
     "build": "turbo run build",
     "release": "standard-version --no-verify",
     "release:dry": "standard-version --dry-run",
