chore: ensure local dev mode works

--- a/packages/graphql/package.json
+++ b/packages/graphql/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "analyze": "size-limit --why",
     "build": "NODE_ENV=production tsup --dts",
-    "dev": "NODE_ENV=development tsup --watch --dts",
+    "build:watch": "NODE_ENV=development tsup --watch --dts",
     "generate": "npm-run-all generate:nexus generate:graphql",
     "generate:graphql": "graphql-codegen --config codegen.yml",
     "generate:nexus": "ts-node --transpile-only -P tsconfig.nexus.json src/index.ts",
