--- a/apps/frontend-pwa/package.json
+++ b/apps/frontend-pwa/package.json
@@ -3,7 +3,7 @@
   "version": "2.0.0-alpha.0",
   "license": "AGPL-3.0",
   "scripts": {
-    "dev": "NODE_ENV=development next dev",
+    "dev": "NODE_ENV=development next dev --port 3001",
     "build": "next build",
     "export": "next build && next export",
     "start": "next start",
