--- a/packages/graphql/package.json
+++ b/packages/graphql/package.json
@@ -43,6 +43,7 @@
     "@tsconfig/recommended": "1.0.1",
     "@types/bcrypt": "5.0.0",
     "@types/express": "^4.17.13",
+    "@types/validator": "13.7.5",
     "@uzh-bf/design-system": "0.0.25",
     "husky": "8.0.1",
     "prettier": "2.7.1",
