chore: ensure that pseudonym and email are unique

--- a/packages/prisma/package.json
+++ b/packages/prisma/package.json
@@ -9,8 +9,8 @@
   ],
   "scripts": {
     "analyze": "size-limit --why",
-    "build": "npm-run-all build:ts build:copy",
-    "build:ts": "NODE_ENV=production tsup",
+    "build:all": "npm-run-all generate build build:copy",
+    "build": "NODE_ENV=production tsup",
     "build:copy": "node src/copy.js",
     "build:watch": "NODE_ENV=development tsup --watch",
     "generate": "prisma generate --schema=src/prisma/schema.prisma",
