--- a/packages/graphql/package.json
+++ b/packages/graphql/package.json
@@ -9,6 +9,7 @@
   ],
   "scripts": {
     "analyze": "size-limit --why",
+    "build:all": "npm-run-all generate build",
     "build": "NODE_ENV=production tsup --dts",
     "build:watch": "NODE_ENV=development tsup --watch --dts",
     "generate": "npm-run-all generate:nexus generate:graphql",
@@ -46,6 +47,7 @@
     "@types/validator": "13.7.5",
     "@uzh-bf/design-system": "0.0.25",
     "husky": "8.0.1",
+    "npm-run-all": "4.1.5",
     "prettier": "2.7.1",
     "prettier-plugin-organize-imports": "3.0.3",
     "size-limit": "8.0.0",
@@ -55,6 +57,7 @@
   "dependencies": {
     "@klicker-uzh/prisma": "^2.0.0-alpha.0",
     "bcrypt": "5.0.1",
+    "dotenv": "16.0.1",
     "generate-password": "1.7.0",
     "graphql": "16.5.0",
     "graphql-scalars": "1.18.0",
