--- a/apps/backend-sls/local.settings.json.template
+++ b/apps/backend-sls/local.settings.json.template
@@ -6,6 +6,7 @@
     "FUNCTIONS_WORKER_RUNTIME": "node",
     "FUNCTIONS_EXTENSION_VERSION": "~4",
     "FUNCTIONS_WORKER_PROCESS_COUNT": 10,
-    "DATABASE_URL": ""
+    "DATABASE_URL": "",
+    "APP_SECRET": "abcd"
   }
 }
