--- a/package.json
+++ b/package.json
@@ -33,10 +33,8 @@
     "Maximilian Weber <maximilian.weber@bf.uzh.ch>"
   ],
   "scripts": {
-    "dev": "NODE_ENV=development turbo run dev",
+    "dev": "turbo run dev",
     "build": "turbo run build",
-    "lint:staged": "turbo run lint:staged",
-    "test:changed": "turbo run test:changed",
     "release": "standard-version --no-verify",
     "release:dry": "standard-version --dry-run",
     "release:alpha": "standard-version --prerelease alpha --no-verify",
@@ -44,18 +42,15 @@
     "release:beta": "standard-version --prerelease beta --no-verify",
     "release:beta:dry": "standard-version --dry-run --prerelease beta",
     "release:rc": "standard-version --prerelease rc --no-verify",
-    "release:rc:dry": "standard-version --dry-run --prerelease rc",
-    "happo": "happo"
+    "release:rc:dry": "standard-version --dry-run --prerelease rc"
   },
   "devDependencies": {
-    "happo.io": "6.8.0",
-    "husky": "7.0.2",
-    "standard-version": "9.3.1",
+    "standard-version": "9.5.0",
     "turbo": "1.4.3",
-    "yaml": "1.10.2"
+    "yaml": "2.1.1"
   },
   "volta": {
-    "node": "16.16.0"
+    "node": "16.17.0"
   },
-  "packageManager": "npm@8.11.0"
+  "packageManager": "npm@8.15.0"
 }
