--- a/packages/graphql/package.json
+++ b/packages/graphql/package.json
@@ -9,8 +9,9 @@
   ],
   "scripts": {
     "analyze": "size-limit --why",
+    "build:all": "npm-run-all generate build",
     "build": "NODE_ENV=production tsup --dts",
-    "dev": "NODE_ENV=development tsup --watch --dts",
+    "build:watch": "NODE_ENV=development tsup --watch --dts",
     "generate": "npm-run-all generate:nexus generate:graphql",
     "generate:graphql": "graphql-codegen --config codegen.yml",
     "generate:nexus": "ts-node --transpile-only -P tsconfig.nexus.json src/index.ts",
@@ -41,9 +42,12 @@
     "@size-limit/preset-small-lib": "8.0.0",
     "@tsconfig/node16": "1.0.3",
     "@tsconfig/recommended": "1.0.1",
+    "@types/bcrypt": "5.0.0",
     "@types/express": "^4.17.13",
+    "@types/validator": "13.7.5",
     "@uzh-bf/design-system": "0.0.25",
     "husky": "8.0.1",
+    "npm-run-all": "4.1.5",
     "prettier": "2.7.1",
     "prettier-plugin-organize-imports": "3.0.3",
     "size-limit": "8.0.0",
@@ -52,9 +56,13 @@
   },
   "dependencies": {
     "@klicker-uzh/prisma": "^2.0.0-alpha.0",
+    "bcrypt": "5.0.1",
+    "dotenv": "16.0.1",
+    "generate-password": "1.7.0",
     "graphql": "16.5.0",
     "graphql-scalars": "1.18.0",
-    "nexus": "1.3.0"
+    "nexus": "1.3.0",
+    "validator": "13.7.0"
   },
   "volta": {
     "extends": "../../package.json"
