--- a/apps/frontend-learning/package.json
+++ b/apps/frontend-learning/package.json
@@ -23,6 +23,7 @@
     "tailwind-merge": "1.5.1"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.19.2",
     "@types/node": "^16.0.0",
     "@types/ramda": "0.28.15",
     "@types/react": "18.0.15",
