--- a/.github/workflows/v2_functions-testing-rs.yml
+++ b/.github/workflows/v2_functions-testing-rs.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/azure/functions-action
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy Node.js project to Azure Function App - functions-testing-rs
+name: Build and deploy backend-sls to Azure Function App - functions-testing-rs
 
 on:
   push:
