--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,23 +5,38 @@
 
 version: 2
 updates:
-  - package-ecosystem: "npm" # See documentation for possible values
-    directory: "/frontend" # Location of package manifests
+  - package-ecosystem: "npm"
+    directory: "/apps/backend-sls"
+    target-branch: v2
     schedule:
-      interval: "weekly"
-  - package-ecosystem: "npm" # See documentation for possible values
-    directory: "/backend" # Location of package manifests
+      interval: "daily"
+  - package-ecosystem: "npm"
+    directory: "/apps/frontend-learning"
+    target-branch: v2
     schedule:
-      interval: "weekly"
-  - package-ecosystem: "npm" # See documentation for possible values
-    directory: "/landing" # Location of package manifests
+      interval: "daily"
+  - package-ecosystem: "npm"
+    directory: "/apps/frontend-manage"
+    target-branch: v2
     schedule:
-      interval: "weekly"
-  - package-ecosystem: "docker" # See documentation for possible values
-    directory: "/frontend" # Location of package manifests
+      interval: "daily"
+  - package-ecosystem: "npm"
+    directory: "/apps/frontend-pwa"
+    target-branch: v2
     schedule:
-      interval: "weekly"
-  - package-ecosystem: "docker" # See documentation for possible values
-    directory: "/backend" # Location of package manifests
+      interval: "daily"
+  - package-ecosystem: "npm"
+    directory: "/packages/graphql"
+    target-branch: v2
     schedule:
-      interval: "weekly"
+      interval: "daily"
+  - package-ecosystem: "npm"
+    directory: "/packages/prisma"
+    target-branch: v2
+    schedule:
+      interval: "daily"
+  - package-ecosystem: "npm"
+    directory: "/packages/lti"
+    target-branch: v2
+    schedule:
+      interval: "daily"
