--- a/.github/workflows/v2_frontend-learning.yml
+++ b/.github/workflows/v2_frontend-learning.yml
@@ -25,6 +25,7 @@ jobs:
       - name: 'Resolve Project Dependencies Using Npm'
         shell: bash
         run: |
+          rm package.json package-lock.json
           pushd './${{ env.APP_PATH }}'
           npm install --package-lock=false
           npm run build --if-present
