ci: remove azure static web app deploy and fix frontend-learning deploy

--- a/.github/workflows/v2_frontend-learning.yml
+++ b/.github/workflows/v2_frontend-learning.yml
@@ -37,6 +37,6 @@ jobs:
           vercel-token: ${{ secrets.VERCEL_TOKEN }} # Required
           github-token: ${{ secrets.GITHUB_TOKEN }} #Optional
           vercel-args: '--prod' #Optional
-          vercel-org-id: ${{ secrets.VERCEL_ORD_ID}}  #Required
+          vercel-org-id: ${{ secrets.VERCEL_ORG_ID}}  #Required
           vercel-project-id: ${{ secrets.VERCEL_FRONTEND_LEARNING_ID}} #Required
           working-directory: ./apps/frontend-learning
