ci(frontend-manage): add vercel deployment with github actions

--- a/.github/workflows/v2_frontend-manage.yml
+++ b/.github/workflows/v2_frontend-manage.yml
@@ -1,4 +1,4 @@
-name: Build and deploy frontend-learning to Vercel
+name: Build and deploy frontend-manage to Vercel
 
 on:
   push:
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:
 
 env:
-  APP_PATH: 'apps/frontend-learning'
+  APP_PATH: 'apps/frontend-manage'
   NODE_VERSION: '16.x'
 
 jobs:
