--- a/apps/frontend-manage/package.json
+++ b/apps/frontend-manage/package.json
@@ -12,6 +12,7 @@
     "@apollo/client": "3.6.9",
     "@klicker-uzh/graphql": "^2.0.0-alpha.8",
     "@uzh-bf/design-system": "0.0.25",
+    "deepmerge": "4.2.2",
     "graphql": "16.5.0",
     "next": "12.2.4",
     "next-intl": "2.7.4",
