--- a/turbo.json
+++ b/turbo.json
@@ -13,6 +13,10 @@
     "generate": {
       "dependsOn": ["^build"],
       "outputs": ["src/client/**", "dist/**"]
+    },
+    "publish": {
+      "cache": false,
+      "dependsOn": ["build"]
     }
   }
 }
