chore: add turbo publish command

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "scripts": {
     "dev": "turbo run dev",
     "build": "turbo run build",
+    "publish": "turbo run publish",
     "release": "standard-version --no-verify",
     "release:dry": "standard-version --dry-run",
     "release:alpha": "standard-version --prerelease alpha --no-verify",
