--- a/docs/package.json
+++ b/docs/package.json
@@ -33,13 +33,12 @@
   "scripts": {
     "build": "docusaurus build",
     "deploy": "docusaurus deploy",
-    "dev": "docusaurus start --port 5000",
     "docusaurus": "docusaurus",
     "examples": "docusaurus-examples",
     "format": "prettier --write src/",
     "rename-version": "docusaurus-rename-version",
     "serve": "docusaurus serve",
-    "start": "docusaurus start",
+    "start": "docusaurus start  --port 5000",
     "swizzle": "docusaurus swizzle",
     "version": "docusaurus-version",
     "write-translations": "docusaurus-write-translations"
