--- a/.github/workflows/v2_frontend-learning.yml
+++ b/.github/workflows/v2_frontend-learning.yml
@@ -24,6 +24,16 @@ jobs:
         with:
           node-version: ${{ env.NODE_VERSION }}
 
+      - name: Prepare Next.js cache
+        uses: actions/cache@v2
+        with:
+          path: |
+            ~/.npm
+            ${{ github.workspace }}/${{ env.APP_PATH }}/.next/cache
+          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package.json') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
+          restore-keys: |
+            ${{ runner.os }}-nextjs-${{ hashFiles('**/package.json') }}-
+
       - name: 'Resolve Project Dependencies Using Npm'
         shell: bash
         run: |
@@ -31,8 +41,6 @@ jobs:
           pushd './${{ env.APP_PATH }}'
           npm install --package-lock=false
           npm run build --if-present
-          npm prune --omit=dev
-          popd
 
       - uses: amondnet/vercel-action@v20 #deploy
         with:
@@ -41,4 +49,4 @@ jobs:
           vercel-args: '--prod' #Optional
           vercel-org-id: ${{ secrets.VERCEL_ORG_ID}}  #Required
           vercel-project-id: ${{ secrets.VERCEL_FRONTEND_LEARNING_ID}} #Required
-          working-directory: ${{ env.APP_PATH }}
+          working-directory: .
