--- a/apps/frontend-learning/package.json
+++ b/apps/frontend-learning/package.json
@@ -16,25 +16,25 @@
     "@uzh-bf/design-system": "0.0.25",
     "deepmerge": "4.2.2",
     "graphql": "16.6.0",
-    "next": "12.2.4",
+    "next": "12.2.5",
     "nookies": "2.5.2",
     "ramda": "0.28.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwind-merge": "1.5.1"
+    "tailwind-merge": "1.6.0"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.2",
     "@types/node": "^16.0.0",
-    "@types/ramda": "0.28.15",
-    "@types/react": "18.0.15",
-    "@types/react-dom": "18.0.6",
+    "@types/ramda": "^0.28.15",
+    "@types/react": "^18.0.15",
+    "@types/react-dom": "^18.0.6",
     "autoprefixer": "10.4.8",
-    "eslint": "8.20.0",
-    "eslint-config-next": "12.2.4",
+    "eslint": "8.22.0",
+    "eslint-config-next": "12.2.5",
     "postcss": "8.4.16",
     "prettier": "2.7.1",
-    "prettier-plugin-organize-imports": "3.0.3",
+    "prettier-plugin-organize-imports": "3.1.0",
     "tailwindcss": "3.1.8",
     "typescript": "4.7.4"
   },
