--- a/apps/frontend-manage/package.json
+++ b/apps/frontend-manage/package.json
@@ -14,25 +14,25 @@
     "@klicker-uzh/graphql": "^2.0.0-alpha.8",
     "@uzh-bf/design-system": "0.0.25",
     "deepmerge": "4.2.2",
-    "graphql": "16.5.0",
-    "next": "12.2.4",
+    "graphql": "16.6.0",
+    "next": "12.2.5",
     "next-intl": "2.7.4",
     "ramda": "0.28.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwind-merge": "1.5.1"
+    "tailwind-merge": "1.6.0"
   },
   "devDependencies": {
     "@types/node": "^16.0.0",
-    "@types/ramda": "0.28.15",
-    "@types/react": "18.0.17",
-    "@types/react-dom": "18.0.6",
+    "@types/ramda": "^0.28.15",
+    "@types/react": "^18.0.17",
+    "@types/react-dom": "^18.0.6",
     "autoprefixer": "10.4.8",
     "eslint": "8.22.0",
-    "eslint-config-next": "12.2.4",
+    "eslint-config-next": "12.2.5",
     "postcss": "8.4.16",
     "prettier": "2.7.1",
-    "prettier-plugin-organize-imports": "3.0.3",
+    "prettier-plugin-organize-imports": "3.1.0",
     "tailwindcss": "3.1.8",
     "typescript": "4.7.4"
   },
