--- a/packages/graphql/package.json
+++ b/packages/graphql/package.json
@@ -39,18 +39,18 @@
     "@graphql-codegen/typescript-operations": "2.5.3",
     "@graphql-codegen/typescript-react-apollo": "3.3.3",
     "@graphql-codegen/typescript-resolvers": "2.7.3",
-    "@size-limit/preset-small-lib": "8.0.0",
+    "@size-limit/preset-small-lib": "8.0.1",
     "@tsconfig/node16": "1.0.3",
     "@tsconfig/recommended": "1.0.1",
-    "@types/bcrypt": "5.0.0",
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
-    "@types/validator": "13.7.5",
+    "@types/validator": "^13.7.5",
     "@uzh-bf/design-system": "0.0.25",
     "husky": "8.0.1",
     "npm-run-all": "4.1.5",
     "prettier": "2.7.1",
     "prettier-plugin-organize-imports": "3.1.0",
-    "size-limit": "8.0.0",
+    "size-limit": "8.0.1",
     "tsup": "6.2.2",
     "typescript": "4.7.4"
   },
