use typescript and specific ts-node config for prisma seed

--- a/apps/backend-sls/tsconfig.json
+++ b/apps/backend-sls/tsconfig.json
@@ -3,5 +3,11 @@
   "include": ["GraphQL"],
   "compilerOptions": {
     "module": "ESNext"
+  },
+  "ts-node": {
+    "transpileOnly": true,
+    "moduleTypes": {
+      "prisma/seed.ts": "esm"
+    }
   }
 }
