--- a/packages/prisma/package.json
+++ b/packages/prisma/package.json
@@ -9,8 +9,9 @@
   ],
   "scripts": {
     "analyze": "size-limit --why",
-    "build:all": "npm-run-all generate build build:copy",
-    "build": "NODE_ENV=production tsup",
+    "build:all": "npm-run-all generate build",
+    "build": "npm-run-all build:ts build:copy",
+    "build:ts": "NODE_ENV=production tsup",
     "build:copy": "node src/copy.js",
     "build:watch": "NODE_ENV=development tsup --watch",
     "generate": "prisma generate --schema=src/prisma/schema.prisma",
@@ -31,13 +32,13 @@
   ],
   "devDependencies": {
     "@mermaid-js/mermaid-cli": "9.1.5",
-    "@size-limit/preset-small-lib": "8.0.0",
+    "@size-limit/preset-small-lib": "8.0.1",
     "@tsconfig/node16": "1.0.3",
     "@tsconfig/recommended": "1.0.1",
     "npm-run-all": "4.1.5",
     "prisma": "4.2.1",
     "prisma-erd-generator": "1.1.0",
-    "size-limit": "8.0.0",
+    "size-limit": "8.0.1",
     "tsup": "6.2.2",
     "typescript": "4.7.4"
   },
