ci: add --force to vercel deployments

--- a/.github/workflows/v2_frontend-learning.yml
+++ b/.github/workflows/v2_frontend-learning.yml
@@ -28,7 +28,7 @@ jobs:
         with:
           vercel-token: ${{ secrets.VERCEL_TOKEN }} # Required
           github-token: ${{ secrets.GITHUB_TOKEN }} #Optional
-          vercel-args: '--prod' #Optional
+          vercel-args: '--prod --force' #Optional
           vercel-org-id: ${{ secrets.VERCEL_ORG_ID}}  #Required
           vercel-project-id: ${{ secrets.VERCEL_FRONTEND_LEARNING_ID}} #Required
           working-directory: ${{ env.APP_PATH }}
