wip: starting session

--- a/packages/graphql/package.json
+++ b/packages/graphql/package.json
@@ -61,6 +61,7 @@
     "generate-password": "1.7.0",
     "graphql": "16.6.0",
     "graphql-scalars": "1.18.0",
+    "ioredis": "5.2.3",
     "nexus": "1.3.0",
     "validator": "13.7.0"
   },
