--- a/apps/backend-sls/local.settings.json.template
+++ b/apps/backend-sls/local.settings.json.template
@@ -7,6 +7,10 @@
     "FUNCTIONS_EXTENSION_VERSION": "~4",
     "FUNCTIONS_WORKER_PROCESS_COUNT": 10,
     "DATABASE_URL": "",
-    "APP_SECRET": "abcd"
+    "APP_SECRET": "abcd",
+    "REDIS_HOST": "",
+    "REDIS_PASS": "",
+    "REDIS_PORT": 6379,
+    "REDIS_TLS": true
   }
 }
