--- a/packages/graphql/tsconfig.json
+++ b/packages/graphql/tsconfig.json
@@ -5,9 +5,9 @@
     "module": "ESNext",
     "baseUrl": ".",
     "paths": {
-      "@graphql/*": ["src/components/*"],
+      "@graphql/*": ["src/graphql/*"],
       "@lib/*": ["src/lib/*"],
-      "@services/*": ["src/pages/*"],
+      "@services/*": ["src/services/*"],
       "@type/*": ["src/types/*"]
     }
   }
