--- a/apps/frontend-pwa/package.json
+++ b/apps/frontend-pwa/package.json
@@ -15,13 +15,15 @@
     "@klicker-uzh/graphql": "^2.0.0-alpha.8",
     "@uzh-bf/design-system": "0.0.25",
     "deepmerge": "4.2.2",
+    "formik": "^2.2.9",
     "graphql": "16.6.0",
     "next": "12.2.5",
-    "next-pwa": "5.5.4",
+    "next-pwa": "5.6.0",
     "ramda": "0.28.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwind-merge": "1.6.0"
+    "tailwind-merge": "1.6.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/node": "^16.0.0",
