--- a/apps/frontend-pwa/package.json
+++ b/apps/frontend-pwa/package.json
@@ -15,7 +15,7 @@
     "@klicker-uzh/graphql": "^2.0.0-alpha.8",
     "@uzh-bf/design-system": "0.0.25",
     "deepmerge": "4.2.2",
-    "formik": "^2.2.9",
+    "formik": "2.2.9",
     "graphql": "16.6.0",
     "next": "12.2.5",
     "next-pwa": "5.6.0",
