--- a/apps/frontend-pwa/package.json
+++ b/apps/frontend-pwa/package.json
@@ -12,16 +12,22 @@
   },
   "dependencies": {
     "@apollo/client": "3.6.9",
+    "@fortawesome/fontawesome-svg-core": "6.1.2",
+    "@fortawesome/free-regular-svg-icons": "6.1.2",
+    "@fortawesome/free-solid-svg-icons": "6.1.2",
+    "@fortawesome/react-fontawesome": "0.2.0",
     "@klicker-uzh/graphql": "^2.0.0-alpha.8",
     "@uzh-bf/design-system": "0.0.26",
     "deepmerge": "4.2.2",
+    "formik": "2.2.9",
     "graphql": "16.6.0",
     "next": "12.2.5",
-    "next-pwa": "5.5.4",
+    "next-pwa": "5.6.0",
     "ramda": "0.28.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwind-merge": "1.6.0"
+    "tailwind-merge": "1.6.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/node": "^16.0.0",
