enhance: add envelop plugins for performance and monitoring, upgrade deps and nodejs (#2801)

--- a/.github/workflows/v2_klicker-rs-dev.yml
+++ b/.github/workflows/v2_klicker-rs-dev.yml
@@ -1,16 +1,18 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/azure/functions-action
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy Node.js project to Azure Function App - klicker-rs-dev
+name: Build and deploy backend-sls to Azure Function App - klicker-rs-dev
 
 on:
   push:
     branches:
       - v2
+    paths:
+      - "apps/backend-sls/**"
   workflow_dispatch:
 
 env:
-  AZURE_FUNCTIONAPP_PACKAGE_PATH: '.' # set this to the path to your web app project, defaults to the repository root
+  AZURE_FUNCTIONAPP_PACKAGE_PATH: 'apps/backend-sls' # set this to the path to your web app project, defaults to the repository root
   NODE_VERSION: '18.x' # set this to the node version to use (supports 8.x, 10.x, 12.x)
 
 jobs:
@@ -28,10 +30,11 @@ jobs:
       - name: 'Resolve Project Dependencies Using Npm'
         shell: bash
         run: |
+          rm package.json package-lock.json
           pushd './${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}'
-          npm install
+          npm install --package-lock=false
           npm run build --if-present
-          npm run test --if-present
+          npm prune --omit=dev
           popd
 
       - name: 'Run Azure Functions Action'
