--- a/apps/backend-sls/package.json
+++ b/apps/backend-sls/package.json
@@ -21,28 +21,35 @@
     "test": "dts test"
   },
   "dependencies": {
+    "@envelop/parser-cache": "4.6.0",
+    "@envelop/validation-cache": "4.6.0",
+    "@envelop/response-cache": "3.1.0",
+    "@envelop/response-cache-redis": "1.1.0",
     "@graphql-authz/core": "1.2.1",
     "@graphql-authz/envelop-plugin": "1.0.3",
-    "@graphql-yoga/node": "2.13.8",
+    "@graphql-hive/client": "0.18.3",
+    "@graphql-yoga/node": "2.13.11",
     "@klicker-uzh/graphql": "^2.0.0-alpha.8",
     "@klicker-uzh/prisma": "^2.0.0-alpha.9",
     "@vendia/serverless-express": "4.10.1",
     "cookie-parser": "1.4.6",
     "express": "4.18.1",
     "graphql": "16.6.0",
+    "ioredis": "5.2.3",
     "jsonwebtoken": "8.5.1",
     "passport": "0.6.0",
     "passport-jwt": "4.0.0"
   },
   "devDependencies": {
     "@azure/functions": "3.2.0",
-    "@tsconfig/node16": "1.0.3",
+    "@graphql-hive/cli": "0.18.2",
+    "@tsconfig/node18": "1.0.1",
     "@tsconfig/recommended": "1.0.1",
-    "@types/cookie-parser": "1.4.3",
-    "@types/express": "4.17.13",
-    "@types/node": "16.11.51",
-    "@types/passport": "1.0.10",
-    "@types/passport-jwt": "3.0.6",
+    "@types/cookie-parser": "^1.4.3",
+    "@types/express": "^4.17.13",
+    "@types/node": "^18.0.0",
+    "@types/passport": "^1.0.10",
+    "@types/passport-jwt": "^3.0.6",
     "dts-cli": "1.6.0",
     "husky": "8.0.1",
     "jest": "28.1.3",
@@ -55,7 +62,7 @@
     "ts-jest": "28.0.8",
     "ts-node": "10.9.1",
     "tslib": "2.4.0",
-    "typescript": "4.7.4"
+    "typescript": "4.8.2"
   },
   "volta": {
     "extends": "../../package.json"
@@ -65,5 +72,8 @@
   },
   "engines": {
     "node": "=18"
+  },
+  "overrides": {
+    "@envelop/core": "^2.5.0"
   }
 }
