--- a/packages/graphql/package.json
+++ b/packages/graphql/package.json
@@ -9,8 +9,9 @@
   ],
   "scripts": {
     "analyze": "size-limit --why",
-    "build:all": "npm-run-all generate build",
+    "build:all": "npm-run-all generate build build:hive",
     "build": "NODE_ENV=production tsup --dts",
+    "build:hive": "hive schema:publish src/graphql/schema.graphql",
     "build:watch": "NODE_ENV=development tsup --watch --dts",
     "generate": "npm-run-all generate:nexus generate:graphql",
     "generate:graphql": "graphql-codegen --config codegen.yml",
@@ -40,7 +41,7 @@
     "@graphql-codegen/typescript-react-apollo": "3.3.3",
     "@graphql-codegen/typescript-resolvers": "2.7.3",
     "@size-limit/preset-small-lib": "8.0.1",
-    "@tsconfig/node16": "1.0.3",
+    "@tsconfig/node18": "1.0.1",
     "@tsconfig/recommended": "1.0.1",
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
@@ -52,7 +53,7 @@
     "prettier-plugin-organize-imports": "3.1.0",
     "size-limit": "8.0.1",
     "tsup": "6.2.2",
-    "typescript": "4.7.4"
+    "typescript": "4.8.2"
   },
   "dependencies": {
     "@klicker-uzh/prisma": "^2.0.0-alpha.0",
