Add or update the Azure App Service build and deployment workflow config

--- a/.github/workflows/v2_klicker-rs-dev.yml
+++ b/.github/workflows/v2_klicker-rs-dev.yml
@@ -1,18 +1,16 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/azure/functions-action
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy backend-sls to Azure Function App - klicker-rs-dev
+name: Build and deploy Node.js project to Azure Function App - klicker-rs-dev
 
 on:
   push:
     branches:
       - v2
-    paths:
-      - "apps/backend-sls/**"
   workflow_dispatch:
 
 env:
-  AZURE_FUNCTIONAPP_PACKAGE_PATH: 'apps/backend-sls'
+  AZURE_FUNCTIONAPP_PACKAGE_PATH: '.' # set this to the path to your web app project, defaults to the repository root
   NODE_VERSION: '18.x' # set this to the node version to use (supports 8.x, 10.x, 12.x)
 
 jobs:
@@ -30,11 +28,10 @@ jobs:
       - name: 'Resolve Project Dependencies Using Npm'
         shell: bash
         run: |
-          rm package.json package-lock.json
           pushd './${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}'
-          npm install --package-lock=false
+          npm install
           npm run build --if-present
-          npm prune --omit=dev
+          npm run test --if-present
           popd
 
       - name: 'Run Azure Functions Action'
@@ -44,4 +41,4 @@ jobs:
           app-name: 'klicker-rs-dev'
           slot-name: 'Production'
           package: ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_E8D086933AC9484D991DC2D7847B35A4 }}
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_05B4990762FA4BDBBB9B2B26DDA1D6B0 }}
