--- a/.github/workflows/v2_klicker-uzh-dev.yml
+++ b/.github/workflows/v2_klicker-uzh-dev.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/azure/functions-action
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy backend-sls to Azure Function App - klicker-rs-dev
+name: Build and deploy backend-sls to Azure Function App - klicker-uzh-dev
 
 on:
   push:
