--- a/.github/workflows/v2_klicker-uzh-rs.yml
+++ b/.github/workflows/v2_klicker-uzh-rs.yml
@@ -28,7 +28,8 @@ jobs:
       - name: 'Resolve Project Dependencies Using Npm'
         shell: pwsh
         run: |
-          rm package.json package-lock.json
+          rm package.json
+          rm package-lock.json
           pushd './${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}'
           npm install --package-lock=false
           npm run build --if-present
