--- a/packages/graphql/package.json
+++ b/packages/graphql/package.json
@@ -44,6 +44,7 @@
     "@tsconfig/node18": "1.0.1",
     "@tsconfig/recommended": "1.0.1",
     "@types/bcrypt": "^5.0.0",
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.13",
     "@types/validator": "^13.7.5",
     "@uzh-bf/design-system": "0.0.25",
@@ -57,7 +58,7 @@
   },
   "dependencies": {
     "@klicker-uzh/prisma": "^2.0.0-alpha.0",
-    "bcrypt": "5.0.1",
+    "bcryptjs": "2.4.3",
     "dotenv": "16.0.1",
     "generate-password": "1.7.0",
     "graphql": "16.6.0",
