--- a/apps/frontend-pwa/package.json
+++ b/apps/frontend-pwa/package.json
@@ -26,6 +26,7 @@
     "ramda": "0.28.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-loader-spinner": "5.3.3",
     "tailwind-merge": "1.6.0",
     "yup": "^0.32.11"
   },
