--- a/package.json
+++ b/package.json
@@ -54,5 +54,8 @@
   "packageManager": "npm@8.15.0",
   "engines": {
     "node": "=18"
+  },
+  "dependencies": {
+    "turbo-darwin-64": "^1.4.3"
   }
 }
