--- a/packages/prisma/.env.template
+++ b/packages/prisma/.env.template
@@ -1,2 +1,2 @@
-DATABASE_URL=
-SHADOW_DATABASE_URL=
+DATABASE_URL="postgres://klicker:klicker@localhost:5432/main"
+SHADOW_DATABASE_URL="postgres://klicker:klicker@localhost:5432/shadow"
