--- a/apps/frontend-pwa/package.json
+++ b/apps/frontend-pwa/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/free-solid-svg-icons": "6.1.2",
     "@fortawesome/react-fontawesome": "0.2.0",
     "@klicker-uzh/graphql": "^2.0.0-alpha.8",
+    "@socialgouv/matomo-next": "1.4.0",
     "@uzh-bf/design-system": "0.0.26",
     "deepmerge": "4.2.2",
     "formik": "2.2.9",
@@ -26,6 +27,7 @@
     "ramda": "0.28.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-intl": "6.1.0",
     "react-loader-spinner": "5.3.3",
     "tailwind-merge": "1.6.0",
     "yup": "^0.32.11"
