--- a/apps/backend-sls/.env.template
+++ b/apps/backend-sls/.env.template
@@ -1,1 +1,6 @@
 DATABASE_URL="postgres://klicker:klicker@localhost:5432/main"
+APP_SECRET=abcd
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_CACHE_HOST=localhost
+REDIS_CACHE_PORT=6380
