--- a/packages/graphql/package.json
+++ b/packages/graphql/package.json
@@ -46,9 +46,11 @@
     "@types/bcrypt": "^5.0.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.13",
+    "@types/jest": "29.0.0",
     "@types/validator": "^13.7.5",
     "@uzh-bf/design-system": "0.0.25",
     "husky": "8.0.1",
+    "jest": "29.0.1",
     "npm-run-all": "4.1.5",
     "prettier": "2.7.1",
     "prettier-plugin-organize-imports": "3.1.0",
