enhance(frontend): add useMarkdown hook and question description to live session

--- a/apps/frontend-pwa/package.json
+++ b/apps/frontend-pwa/package.json
@@ -32,7 +32,14 @@
     "react-countdown-circle-timer": "3.0.9",
     "react-dom": "18.2.0",
     "react-loader-spinner": "5.3.3",
+    "rehype-katex": "6.0.2",
+    "rehype-react": "7.1.1",
+    "rehype-sanitize": "5.0.1",
+    "remark-math": "5.1.1",
+    "remark-parse": "10.0.1",
+    "remark-rehype": "10.1.0",
     "tailwind-merge": "1.6.0",
+    "unified": "10.1.2",
     "yup": "^0.32.11"
   },
   "devDependencies": {
