wip(frontend): add SC answer options including switching logic

--- a/apps/frontend-pwa/package.json
+++ b/apps/frontend-pwa/package.json
@@ -40,7 +40,8 @@
     "remark-rehype": "10.1.0",
     "tailwind-merge": "1.6.0",
     "unified": "10.1.2",
-    "yup": "^0.32.11"
+    "v8n": "1.5.1",
+    "yup": "0.32.11"
   },
   "devDependencies": {
     "@types/node": "^18.0.0",
