--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -40,3 +40,8 @@ updates:
     target-branch: v2
     schedule:
       interval: "daily"
+  - package-ecosystem: "npm"
+    directory: "/packages/markdown"
+    target-branch: v2
+    schedule:
+      interval: "daily"
