--- a/apps/frontend-pwa/package.json
+++ b/apps/frontend-pwa/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/free-solid-svg-icons": "6.1.2",
     "@fortawesome/react-fontawesome": "0.2.0",
     "@klicker-uzh/graphql": "^2.0.0-alpha.8",
+    "@klicker-uzh/markdown": "^2.0.0-alpha.8",
     "@socialgouv/matomo-next": "1.4.0",
     "@uzh-bf/design-system": "0.0.32",
     "dayjs": "1.11.5",
