--- a/packages/markdown/package.json
+++ b/packages/markdown/package.json
@@ -3,6 +3,7 @@
   "version": "2.0.0-alpha.21",
   "license": "AGPL-3.0",
   "main": "dist/index.js",
+  "type": "module",
   "types": "dist/index.d.ts",
   "files": [
     "dist"
