--- a/apps/frontend-pwa/package.json
+++ b/apps/frontend-pwa/package.json
@@ -17,10 +17,14 @@
     "@fortawesome/free-solid-svg-icons": "6.1.2",
     "@fortawesome/react-fontawesome": "0.2.0",
     "@klicker-uzh/graphql": "^2.0.0-alpha.8",
-    "@uzh-bf/design-system": "0.0.26",
+    "@klicker-uzh/markdown": "^2.0.0-alpha.8",
+    "@socialgouv/matomo-next": "1.4.0",
+    "@uzh-bf/design-system": "0.0.32",
+    "dayjs": "1.11.5",
     "deepmerge": "4.2.2",
     "formik": "2.2.9",
     "graphql": "16.6.0",
+    "localforage": "^1.10.0",
     "next": "12.2.5",
     "next-pwa": "5.6.0",
     "ramda": "0.28.0",
@@ -28,7 +32,7 @@
     "react-dom": "18.2.0",
     "react-loader-spinner": "5.3.3",
     "tailwind-merge": "1.6.0",
-    "yup": "^0.32.11"
+    "yup": "0.32.11"
   },
   "devDependencies": {
     "@types/node": "^18.0.0",
@@ -36,11 +40,11 @@
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "autoprefixer": "10.4.8",
-    "eslint": "8.22.0",
+    "eslint": "8.23.0",
     "eslint-config-next": "12.2.5",
     "postcss": "8.4.16",
     "prettier": "2.7.1",
-    "prettier-plugin-organize-imports": "3.1.0",
+    "prettier-plugin-organize-imports": "3.1.1",
     "tailwindcss": "3.1.8",
     "typescript": "4.8.2"
   },
