--- a/apps/backend-sls/package.json
+++ b/apps/backend-sls/package.json
@@ -53,6 +53,7 @@
     "@types/passport": "^1.0.10",
     "@types/passport-jwt": "^3.0.6",
     "@types/supertest": "^2.0.12",
+    "@uzh-bf/design-system": "^0.0.33",
     "dotenv": "16.0.2",
     "dts-cli": "1.6.0",
     "husky": "8.0.1",
