--- a/packages/graphql/package.json
+++ b/packages/graphql/package.json
@@ -48,7 +48,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "29.0.0",
     "@types/validator": "^13.7.5",
-    "@uzh-bf/design-system": "^0.0.33",
+    "@uzh-bf/design-system": "0.0.34",
     "husky": "8.0.1",
     "jest": "29.0.1",
     "npm-run-all": "4.1.5",
