--- a/apps/backend-responses/package.json
+++ b/apps/backend-responses/package.json
@@ -30,6 +30,7 @@
     "@tsconfig/node18": "1.0.1",
     "@tsconfig/recommended": "1.0.1",
     "@types/jest": "^29.0.0",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/md5": "2.3.2",
     "@types/node": "^18.0.0",
     "@types/ramda": "0.28.15",
@@ -38,13 +39,13 @@
     "dotenv": "16.0.2",
     "dts-cli": "1.6.0",
     "husky": "8.0.1",
-    "jest": "28.1.3",
+    "jest": "29.0.2",
     "npm-run-all": "4.1.5",
     "prettier": "2.7.1",
     "prettier-plugin-organize-imports": "3.1.0",
     "size-limit": "8.0.1",
     "supertest": "6.2.4",
-    "ts-jest": "28.0.8",
+    "ts-jest": "29.0.0-next.1",
     "ts-node": "10.9.1",
     "tslib": "2.4.0",
     "typescript": "4.8.2"
