--- a/apps/backend-sls/package.json
+++ b/apps/backend-sls/package.json
@@ -49,6 +49,7 @@
     "@types/express": "^4.17.13",
     "@types/ioredis-mock": "^5.6.0",
     "@types/jest": "^29.0.0",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^18.0.0",
     "@types/passport": "^1.0.10",
     "@types/passport-jwt": "^3.0.6",
@@ -66,7 +67,7 @@
     "prisma": "4.3.1",
     "size-limit": "8.0.1",
     "supertest": "6.2.4",
-    "ts-jest": "28.0.8",
+    "ts-jest": "29.0.0-next.1",
     "ts-node": "10.9.1",
     "tslib": "2.4.0",
     "typescript": "4.8.2"
