logic up to leaderboard entry creation

--- a/apps/backend-responses/local.settings.json.template
+++ b/apps/backend-responses/local.settings.json.template
@@ -10,9 +10,8 @@
     "REDIS_HOST": "localhost",
     "REDIS_PORT": 6379
   },
-  ,
   "Host": {
-    "CORS": "http://localhost:3001",
+    "CORS": "http://127.0.0.1:3001",
     "CORSCredentials": true
   }
 }
