--- a/apps/frontend-pwa/package.json
+++ b/apps/frontend-pwa/package.json
@@ -24,8 +24,8 @@
     "deepmerge": "4.2.2",
     "formik": "2.2.9",
     "graphql": "16.6.0",
-    "localforage": "^1.10.0",
-    "next": "12.2.5",
+    "localforage": "1.10.0",
+    "next": "12.3.0",
     "next-pwa": "5.6.0",
     "ramda": "0.28.0",
     "react": "18.2.0",
