feat: block deactivation with redis persistence, leaderboard computation (#2851)

--- a/apps/backend-responses/local.settings.json.template
+++ b/apps/backend-responses/local.settings.json.template
@@ -9,5 +9,9 @@
     "APP_SECRET": "abcd",
     "REDIS_HOST": "localhost",
     "REDIS_PORT": 6379
+  },
+  "Host": {
+    "CORS": "http://127.0.0.1:3001",
+    "CORSCredentials": true
   }
 }
