--- a/apps/frontend-pwa/package.json
+++ b/apps/frontend-pwa/package.json
@@ -29,19 +29,24 @@
     "next": "12.3.0",
     "next-pwa": "5.6.0",
     "nookies": "2.5.2",
+    "object-hash": "3.0.0",
     "ramda": "0.28.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-loader-spinner": "5.3.3",
+    "sharp": "0.31.0",
     "tailwind-merge": "1.6.0",
     "yup": "0.32.11"
   },
   "devDependencies": {
+    "@bigheads/core": "0.3.3",
     "@types/body-parser": "^1.19.2",
     "@types/node": "^18.0.0",
+    "@types/object-hash": "2.2.1",
     "@types/ramda": "^0.28.15",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "@types/sharp": "0.30.5",
     "autoprefixer": "10.4.8",
     "eslint": "8.23.0",
     "eslint-config-next": "12.2.5",
