--- a/packages/grading/package.json
+++ b/packages/grading/package.json
@@ -11,7 +11,8 @@
     "analyze": "size-limit --why",
     "build": "NODE_ENV=production tsup",
     "build:watch": "NODE_ENV=development tsup --watch",
-    "size": "size-limit"
+    "size": "size-limit",
+    "test": "jest"
   },
   "engines": {
     "node": "=18"
@@ -26,8 +27,11 @@
     "@size-limit/preset-small-lib": "8.0.1",
     "@tsconfig/node18": "1.0.1",
     "@tsconfig/recommended": "1.0.1",
+    "@types/jest": "^29.0.2",
     "@types/ramda": "0.28.15",
+    "jest": "29.0.3",
     "size-limit": "8.0.1",
+    "ts-jest": "29.0.1",
     "tsup": "6.2.2",
     "typescript": "4.8.2"
   },
