--- a/apps/frontend-manage/package.json
+++ b/apps/frontend-manage/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@apollo/client": "3.6.9",
     "@klicker-uzh/graphql": "^2.0.0-alpha.8",
-    "@uzh-bf/design-system": "0.0.37",
+    "@radix-ui/react-dropdown-menu": "1.0.0",
+    "@uzh-bf/design-system": "0.0.38",
     "deepmerge": "4.2.2",
     "graphql": "16.6.0",
     "next": "12.2.5",
