--- a/packages/graphql/package.json
+++ b/packages/graphql/package.json
@@ -31,6 +31,10 @@
       "limit": "10 KB"
     }
   ],
+  "peerDependencies": {
+    "@klicker-uzh/grading": "^2.0.0-alpha.0",
+    "@klicker-uzh/prisma": "^2.0.0-alpha.0"
+  },
   "devDependencies": {
     "@graphql-codegen/cli": "2.11.6",
     "@graphql-codegen/fragment-matcher": "3.3.1",
@@ -60,8 +64,6 @@
     "typescript": "4.8.2"
   },
   "dependencies": {
-    "@klicker-uzh/grading": "^2.0.0-alpha.0",
-    "@klicker-uzh/prisma": "^2.0.0-alpha.0",
     "bcryptjs": "2.4.3",
     "dayjs": "1.11.5",
     "dotenv": "16.0.1",
