--- a/apps/frontend-manage/package.json
+++ b/apps/frontend-manage/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@apollo/client": "3.6.9",
+    "@klicker-uzh/prisma": "^2.0.0-alpha.8",
     "@klicker-uzh/graphql": "^2.0.0-alpha.8",
     "@radix-ui/react-dropdown-menu": "1.0.0",
     "@uzh-bf/design-system": "0.0.38",
