--- a/apps/backend-responses/package.json
+++ b/apps/backend-responses/package.json
@@ -19,6 +19,7 @@
     "test": "dts test"
   },
   "dependencies": {
+    "@klicker-uzh/grading": "^2.0.0-alpha.23",
     "@upstash/redis": "1.13.1",
     "ioredis": "5.2.3",
     "jsonwebtoken": "8.5.1",
