--- a/apps/frontend-manage/package.json
+++ b/apps/frontend-manage/package.json
@@ -11,8 +11,8 @@
   },
   "dependencies": {
     "@apollo/client": "3.6.9",
-    "@klicker-uzh/prisma": "^2.0.0-alpha.8",
     "@klicker-uzh/graphql": "^2.0.0-alpha.8",
+    "@klicker-uzh/prisma": "^2.0.0-alpha.8",
     "@radix-ui/react-dropdown-menu": "1.0.0",
     "@uzh-bf/design-system": "0.0.38",
     "deepmerge": "4.2.2",
@@ -21,6 +21,7 @@
     "ramda": "0.28.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-qrcode-logo": "2.8.0",
     "tailwind-merge": "1.6.0"
   },
   "devDependencies": {
