--- a/apps/frontend-pwa/package.json
+++ b/apps/frontend-pwa/package.json
@@ -4,7 +4,7 @@
   "version": "2.0.0-alpha.22",
   "license": "AGPL-3.0",
   "scripts": {
-    "devNoSW": "NODE_ENV=development next dev --port 3001",
+    "dev": "NODE_ENV=development next dev --port 3001",
     "build": "next build",
     "start": "next start --port 3001",
     "lint": "next lint"
