feat(apps/frontend-pwa): add logic to login page and connect index to backend (#2878)

--- a/apps/frontend-pwa/package.json
+++ b/apps/frontend-pwa/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "dev": "NODE_ENV=development next dev --port 3001",
     "build": "next build",
-    "export": "next build && next export",
-    "start": "next start",
+    "start": "next start --port 3001",
     "lint": "next lint"
   },
   "dependencies": {
@@ -21,6 +20,7 @@
     "@klicker-uzh/markdown": "^2.0.0-alpha.8",
     "@socialgouv/matomo-next": "1.4.0",
     "@uzh-bf/design-system": "0.0.38",
+    "@radix-ui/react-toggle": "1.0.0",
     "body-parser": "1.20.0",
     "dayjs": "1.11.5",
     "deepmerge": "4.2.2",
