--- a/apps/backend-sls/package.json
+++ b/apps/backend-sls/package.json
@@ -53,6 +53,7 @@
     "@types/node": "^18.0.0",
     "@types/passport": "^1.0.10",
     "@types/passport-jwt": "^3.0.6",
+    "@types/ramda": "0.28.15",
     "@types/supertest": "^2.0.12",
     "@uzh-bf/design-system": "0.0.38",
     "axios": "0.27.2",
@@ -65,6 +66,7 @@
     "prettier": "2.7.1",
     "prettier-plugin-organize-imports": "3.1.1",
     "prisma": "4.3.1",
+    "ramda": "0.28.0",
     "size-limit": "8.1.0",
     "supertest": "6.2.4",
     "ts-jest": "29.0.1",
