--- a/apps/frontend-manage/package.json
+++ b/apps/frontend-manage/package.json
@@ -17,6 +17,7 @@
     "@uzh-bf/design-system": "0.0.39",
     "deepmerge": "4.2.2",
     "graphql": "16.6.0",
+    "js-search": "2.0.0",
     "next": "12.2.5",
     "ramda": "0.28.0",
     "react": "18.2.0",
@@ -26,6 +27,7 @@
     "tailwind-merge": "1.6.0"
   },
   "devDependencies": {
+    "@types/js-search": "1.4.0",
     "@types/node": "^18.0.0",
     "@types/ramda": "^0.28.15",
     "@types/react": "^18.0.17",
