wip: misc improvements

--- a/apps/backend-responses/package.json
+++ b/apps/backend-responses/package.json
@@ -16,6 +16,7 @@
     "dev": "NODE_ENV=development npm-run-all --parallel dev:dts dev:func",
     "dev:dts": "dts watch --entry AddResponse/index.ts",
     "dev:func": "func start -p 7072",
+    "format": "prettier --write .",
     "test": "dts test"
   },
   "dependencies": {
