--- a/packages/prisma/package.json
+++ b/packages/prisma/package.json
@@ -14,6 +14,7 @@
     "build:ts": "NODE_ENV=production tsup",
     "build:copy": "node src/copy.js",
     "build:watch": "NODE_ENV=development tsup --watch",
+    "format": "prettier --write .",
     "generate": "prisma generate --schema=src/prisma/schema.prisma",
     "prisma:migrate": "prisma migrate dev --schema=src/prisma/schema.prisma",
     "prisma:push": "prisma db push --schema=src/prisma/schema.prisma",
