--- a/apps/backend-sls/package.json
+++ b/apps/backend-sls/package.json
@@ -17,6 +17,7 @@
     "dev": "NODE_ENV=development npm-run-all --parallel dev:dts dev:func",
     "dev:dts": "dts watch --entry GraphQL/index.ts",
     "dev:func": "func start",
+    "format": "prettier --write .",
     "seed": "ts-node --esm prisma/seed.ts",
     "test": "dts test"
   },
