--- a/apps/frontend-manage/package.json
+++ b/apps/frontend-manage/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "NODE_ENV=development next dev --port 3002",
     "build": "next build",
+    "format": "prettier --write .",
     "start": "next start",
     "lint": "next lint"
   },
