--- a/apps/frontend-pwa/package.json
+++ b/apps/frontend-pwa/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "NODE_ENV=development next dev --port 3001",
     "build": "next build",
+    "format": "prettier --write .",
     "start": "next start --port 3001",
     "lint": "next lint"
   },
@@ -16,12 +17,12 @@
     "@fortawesome/free-regular-svg-icons": "6.2.0",
     "@fortawesome/free-solid-svg-icons": "6.2.0",
     "@fortawesome/react-fontawesome": "0.2.0",
-    "@klicker-uzh/prisma": "^2.0.0-alpha.8",
     "@klicker-uzh/graphql": "^2.0.0-alpha.8",
     "@klicker-uzh/markdown": "^2.0.0-alpha.8",
+    "@klicker-uzh/prisma": "^2.0.0-alpha.8",
+    "@radix-ui/react-toggle": "1.0.0",
     "@socialgouv/matomo-next": "1.4.0",
     "@uzh-bf/design-system": "0.0.38",
-    "@radix-ui/react-toggle": "1.0.0",
     "body-parser": "1.20.0",
     "dayjs": "1.11.5",
     "deepmerge": "4.2.2",
@@ -41,6 +42,10 @@
     "yup": "0.32.11"
   },
   "devDependencies": {
+    "@tailwindcss/aspect-ratio": "0.4.2",
+    "@tailwindcss/forms": "0.5.3",
+    "@tailwindcss/line-clamp": "0.4.2",
+    "@tailwindcss/typography": "0.5.7",
     "@types/body-parser": "^1.19.2",
     "@types/node": "^18.0.0",
     "@types/object-hash": "2.2.1",
@@ -55,6 +60,7 @@
     "prettier": "2.7.1",
     "prettier-plugin-organize-imports": "3.1.1",
     "tailwindcss": "3.1.8",
+    "tailwindcss-radix": "2.6.0",
     "typescript": "4.8.3"
   },
   "volta": {
