--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "dev": "turbo run dev",
     "build": "turbo run build",
     "publish": "turbo run publish",
+    "format": "turbo run format",
     "release": "standard-version --no-verify",
     "release:dry": "standard-version --dry-run",
     "release:alpha": "standard-version --prerelease alpha --no-verify",
