--- a/packages/markdown/package.json
+++ b/packages/markdown/package.json
@@ -12,6 +12,7 @@
     "analyze": "size-limit --why",
     "build": "NODE_ENV=production tsup",
     "build:watch": "NODE_ENV=development tsup --watch",
+    "format": "prettier --write .",
     "size": "size-limit"
   },
   "engines": {
