--- a/turbo.json
+++ b/turbo.json
@@ -1,6 +1,9 @@
 {
   "$schema": "https://turborepo.org/schema.json",
   "pipeline": {
+    "format": {
+      "cache": false
+    },
     "build": {
       "dependsOn": ["generate", "^build"],
       "outputs": ["dist/**", ".next/**"]
