--- a/apps/backend-sls/tsconfig.json
+++ b/apps/backend-sls/tsconfig.json
@@ -8,6 +8,9 @@
     "transpileOnly": true,
     "moduleTypes": {
       "prisma/constants.ts": "esm",
+      "prisma/dataBF1.ts": "esm",
+      "prisma/dataAMI.ts": "esm",
+      "prisma/helpers.ts": "esm",
       "prisma/seed.ts": "esm"
     }
   }
