--- a/apps/backend-sls/tsconfig.json
+++ b/apps/backend-sls/tsconfig.json
@@ -11,7 +11,8 @@
       "prisma/dataBF1.ts": "esm",
       "prisma/dataAMI.ts": "esm",
       "prisma/helpers.ts": "esm",
-      "prisma/seed.ts": "esm"
+      "prisma/seed.ts": "esm",
+      "test/integration.test.ts": "esm",
     }
   }
 }
