enhance: rework seed, improve layout of PWA, error boundary and error pages (#2887)

--- a/apps/backend-sls/tsconfig.json
+++ b/apps/backend-sls/tsconfig.json
@@ -8,7 +8,11 @@
     "transpileOnly": true,
     "moduleTypes": {
       "prisma/constants.ts": "esm",
-      "prisma/seed.ts": "esm"
+      "prisma/dataBF1.ts": "esm",
+      "prisma/dataAMI.ts": "esm",
+      "prisma/helpers.ts": "esm",
+      "prisma/seed.ts": "esm",
+      "test/integration.test.ts": "esm"
     }
   }
 }
