feat: profile setup (username, avatar) and PWA layout improvements (#2809)
Co-authored-by: Roland Schläfli <roland.schlaefli@bf.uzh.ch>
Co-authored-by: Roland Schlaefli <rolandschlaefli@gmail.com>

--- a/package.json
+++ b/package.json
@@ -55,5 +55,9 @@
   "packageManager": "npm@8.15.0",
   "engines": {
     "node": "=18"
+  },
+  "dependencies": {
+    "@bigheads/core": "^0.3.3",
+    "react-nice-avatar": "^1.2.4"
   }
 }
