--- a/.github/workflows/v2_klickeruzhprod-graphql(qa).yml
+++ b/.github/workflows/v2_klickeruzhprod-graphql(qa).yml
@@ -3,7 +3,10 @@ name: Build and deploy backend-sls to Azure Function App (QA)
 on:
   push:
     branches:
-      - v2
+      - "v2"
+    paths:
+      - "apps/backend-sls/**"
+      - ".github/workflows/**"
   workflow_dispatch:
 
 env:
