--- a/.github/workflows/v2_klickeruzhprod-responses(qa).yml
+++ b/.github/workflows/v2_klickeruzhprod-responses(qa).yml
@@ -1,10 +1,12 @@
 name: Build and deploy backend-responses to Azure Function App (QA)
 
-
 on:
   push:
     branches:
-      - v2
+      - "v2"
+    paths:
+      - "apps/backend-responses/**"
+      - ".github/workflows/**"
   workflow_dispatch:
 
 env:
